# ska-data-lifecycle

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  CROSS_TABLE_QUERIES.md  Dockerfile  Dockerfile-local  Dockerfile-tests  LICENSE  MIGRATION_PLAN.md  MR_ANALYSIS.md  Makefile  README.md  SQLALCHEMY_DATA_ITEM_METADATA_FIX.md  SQLALCHEMY_DICT_TO_JSON_FIX.md  SQLALCHEMY_INGEST_MIGRATION.md  SQLALCHEMY_ITEM_TAGS_FIX.md  SQLALCHEMY_MIGRATION.md  SQLALCHEMY_MIGRATION_REQUESTS_FIX.md  SQLALCHEMY_MIGRATION_SUMMARY.md  SQLALCHEMY_ROW_MAPPING_FIX.md  STORAGE_MANAGER_FIXES.md  UUID_JSON_SERIALIZATION_FIX.md  demo.ipynb  docker-compose.yml  pyproject.toml  setup-demo.sh
charts/: README.md
charts/ska-dlm/: Chart.yaml  README.md  changelog.yaml  requirements.yaml  values.yaml
charts/ska-dlm/initdb-scripts/: 03_create-schema.sql  05_create_enum_types.sql  07_create_database.sql  10_create_roles.sql  10_create_tables.sql  11_create_eb_trigger.sql  12_2.3_release.sql  20_alter_data_item_metadata_to_jsonb.sql
charts/ska-dlm/keycloak/: realm-export.json
charts/ska-dlm/templates/: _helpers.tpl  archive.yaml  auth-configmap.yaml  auth-secret.yaml  benchmark.yaml  ci-permissions.yaml  db-migrate.yaml  db-migrations-configmap.yaml  db-patch-configmap.yaml  dlm-configmap.yaml  gateway.yaml  heuristic.yaml  heuristics.yaml  ingest.yaml  ingest.yml  ingress.yaml  initdb-base-configmap.yaml  initdb-scripts-configmap.yaml  keycloak-realm-configmap.yaml  keycloak.yaml  location-configmap.yaml  migration.yaml  outbox.yaml  postgresql.yaml  postgrest.yaml  pv.yaml  pvc.yaml  rabbitmq.yaml  rclone-configmap.yaml  rclone.yaml  request.yaml  sqlalchemy-configmap.yaml  sqlalchemy-secret.yaml  storage-configmap.yaml  storage-secret.yaml  storage.yaml  storage.yml
config/DB/: ska_dlm_meta.sql
docker/: test-services.docker-compose.yml
docs/src/: conf.py  index.rst
docs/src/_templates/: custum_class_template.rst
docs/src/api/: cli.rst  index.rst  python.rst  rest.rst  ska-dlm-client.rst
docs/src/example/: index.md
docs/src/guides/: dp_cluster.md  dp_cluster.rst  local_deployment.md  usage.md
docs/src/heuristics/: change_oid_phase.yaml  combine_uid_phases.yaml  data_item_deletion.rst  data_item_expiry.rst  data_item_phase.rst  decrease_oid_phase.yaml  deletion_diagram.yaml  identify_target_storage.yaml  increase_oid_phase.yaml  index.rst  oid_expiry_diagram.yaml  oid_phase_enforce.yaml  uid_expiry_diagram.yaml
docs/src/overview/: index.rst
resources/: ci-dev-dp-values.yaml  ci-dev-values.yaml  cluster-k8s-values.yaml  cluster-minikube-values.yaml  cluster-sdhp-values.yaml  config-ci-dev-values.yaml  config-integration-values.yaml  config-staging-values.yaml  dp-cluster.yaml  example-pgauth-from-secret.yaml  example-pgauth-from-vault.yaml  example-pgauth-with-embedded-db.yaml  gitlab-cluster.yaml  initialised-dlm.yaml  integration-dp-values.yaml  integration-values.yaml  pv.yaml  staging-dp-values.yaml  staging-values.yaml
resources/values/: development-cluster.yaml  development-gitlab-ci.yaml  development-minikube.yaml  production-cluster.yaml
scripts/: Dockerfile-benchmark  README.md  benchmark.docker-compose.yaml  helm_common.sh  helm_start.sh  helm_stop.sh  kill_test_processes.sh  setup_services.sh  teardown_services.sh
scripts/benchmark/: __init__.py  __main__.py  bench.py  migrate.py  register.py
scripts/db-model-generator/: complete.sql  create-enum-types.sql  create-tables.sql  docker-compose.yml  generate-models.sh
setup/DB/: 2.3_release.sql  changelog.yaml  create-database.sql  create-eb-data-item-trigger.sql  create-enum-types.sql  create-roles.sql  create-schema.sql  create-tables.sql  drop-tables.sql  ska_dlm_meta.sql  ska_dlm_meta.sql.yuga
setup/postgREST/: config.json  postgREST.conf
src/ska_data_lifecycle/: __init__.py  ska_data_lifecycle.py
src/ska_dlm/: __init__.py  cli.py  cli_entrypoint.py  cli_utils.py  common_types.py  config.yaml  config_sqlalchemy.yaml  error_handling_typer.py  exception_handling_typer.py  exceptions.py  extract_openapi.py  fastapi_utils.py  json_utils.py  ska_dlm.py  ska_dlm_cli.py  ska_dlm_web.py  test.py  typer_types.py  typer_utils.py
src/ska_dlm/DLMmigration/: __init__.py
src/ska_dlm/DLMrequest/: __init__.py
src/ska_dlm/DLMstorage/: __init__.py
src/ska_dlm/data_item/: __init__.py  cli.py  data_item_requests.py  verify_alchemy.py
src/ska_dlm/dlm_db/: __init__.py  db_access.py  db_access_sqlalchemy.py  db_direct_access.py  dlm_models.py  models.py  orm.py
src/ska_dlm/dlm_heuristic_engine/: __init__.py  dlm_heuristic_engine.py
src/ska_dlm/dlm_heuristics/: __init__.py  dlm_heuristics.py  heuristics.py
src/ska_dlm/dlm_ingest/: __init__.py  cli.py  dlm_ingest_requests.py  dlm_requests.py
src/ska_dlm/dlm_migration/: __init__.py  cli.py  dlm_migration_requests.py
src/ska_dlm/dlm_outbox/: __init__.py  outbox.py  relay.py
src/ska_dlm/dlm_request/: __init__.py  cli.py  dlm_request_requests.py
tests/: Dockerfile-db  Dockerfile-dlm-compose  Dockerfile-dlm-gateway  Dockerfile-dlm-service  Dockerfile-gateway  Dockerfile-heuristic-engine  Dockerfile-heuristics  Dockerfile-keycloak  Dockerfile-keycloak-db  Dockerfile-migrations  Dockerfile-rclone  Dockerfile-testrunner  __init__.py  common_docker.py  common_k8s.py  common_local.py  config.dockercompose.yaml  config.yaml  conftest.py  dlm.docker-compose.yaml  location-config.json  realm-export.json  services.docker-compose.yaml  storage-config.json  test_cli_help.py  test_env.py  test_version.py  testrunner.docker-compose.yaml
tests/integration/: __init__.py  test_cli.py  test_dlm_db_models.py  test_ska_data_lifecycle.py
tests/unit/: test_cli_utils.py  test_db_access.py  test_dlm_db_models.py  test_dlm_outbox.py  test_dlm_storage_requests.py  test_doc_utils.py  test_heuristics.py  test_ingest.py  test_migration.py  test_request.py  test_ska_data_lifecycle.py  test_storage.py  test_trigger.py  test_utils.py
tests/volumes/: config-dockercompose.yaml  config-k8s.yaml  config-local.yaml
(+31 files in other folders)
