[tool.poetry]
name = "ska_data_lifecycle"
version = "0.0.1"
description = "Services for managing the lifecycle of SKA data products"
authors = [
    "Andreas Wicenec <andreas.wicenec@icrar.org>",
    "James Strauss <james.strauss@icrar.org>",
    ]
repository = "https://gitlab.com/ska-telescope/sdp/ska-data-lifecycle"
documentation = "https://developer.skao.int/projects/ska-data-lifecycle/en/latest/"
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include="ska_dlm", from="src"}]

[tool.poetry.scripts]
ska-dlm = "ska_dlm.cli:main"
dlm-sm-service = "ska_dlm.dlm_storage.main:main"

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.10"
ska-ser-logging = "^0.4.1+0a677a67"
requests = "^2.31.0"
pyyaml = "^6.0.1"
python-benedict = "^0.33.1"
inflect = "^7.0.0"
ipython = "^8.20.0"
typer = "^0.9.0"
rich = "^13.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.17.4"
pylint-junit = "^0.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
flake8-pyproject = "^1.2.3"
ipykernel = "^6.29.2"
kubernetes = "^29.0.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.0"
ska-ser-sphinx-theme = "^0.1.1"
sphinx-autodoc-typehints = "^1.23.0"
m2r2 = "<0.3.3"

[tool.pytest.ini_options]
addopts = "-v"

[tool.flake8]
docstring-style = "sphinx"
rst-directives = "literalinclude"
rst-roles = [
    "py:attr",
    "py:class",
    "py:const",
    "py:exc",
    "py:func",
    "py:meth",
    "py:mod",
]
enable = "DAR104"
max-complexity = 10

ignore = [
    # Black handles formatting for us
    "E203", # Whitespace before ':'
    "W503", # Line break occurred before a binary operator
    "E501", # line too long

    # These hinder adoption of documentation
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood; try rephrasing
    "D202", # No blank lines allowed after function docstring
    "D205", # 1 blank line required between summary line and description
]

[tool.pylint.messages_control]
disable = ["duplicate-code", "fixme"]
enable = ["useless-suppression"]

[tool.pylint.similarities]
min-similarity-lines = 7
ignore-imports = "yes"

[build-system]
requires = ["poetry>=1.8.2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
